# DopplerTrack

./: CMakeLists.txt  DATA_LICENSE.md  LICENSE  README.md  data  package.xml
data/: README.md
eval/: eval.py  requirements.txt
eval/groundtruth/: Aeva-car.txt  Aq-car.txt  Aq_car.txt  Intersection.txt  Straight.txt
eval/motmetrics/: distances.py  io.py  utils.py
eval/motmetrics/temp/: mot.py  test.py  utils.py
eval/output/: 000004.json  000005.json  000006.json  000007.json  000008.json  000009.json  000010.json  000011.json  000012.json  000013.json  000014.json  000015.json  000016.json  000017.json  000018.json  000019.json  000020.json  000021.json  000022.json  000023.json  000024.json  000025.json  000026.json  000027.json  000028.json  000029.json  000030.json  000031.json  000032.json  000033.json  000034.json  000035.json  000036.json  000037.json  000038.json  000039.json  000040.json  000041.json  000042.json  000043.json  (+707 more)
include/: fmcw_lidar.hpp
include/detecting/: CVC_cluster.h  backgroundSubtraction.h  lshaped_fitting.h
include/hungarian/: hungarian_optimizer.h  secure_matrix.h
launch/: dopplertarck_aeva_car.launch  dopplertarck_aq_car.launch  dopplertarck_intersection.launch  dopplertarck_straight.launch
msg/: DetectedObject.msg
preprint_paper/: README.md
src/: detector_node.cpp  publisher_node.cpp  tracker_node.cpp
src/detecting/: CVC_cluster.cpp  lshaped_fitting.cpp
